--- a/package.json
+++ b/package.json
@@ -6,16 +6,33 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.3",
+    "@expo-google-fonts/oswald": "^0.2.3",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "camelize": "^1.0.1",
     "expo": "~48.0.4",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-paper": "^5.2.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/eslint-config": "^0.72.1",
+    "eslint": "^8.35.0",
+    "prettier": "^2.8.4"
   },
   "private": true
 }
